correção crud jogos - destroy, apagando modelos n usados